Make ImageField optional; home template renders the list of posts

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -1,1 +1,7 @@
-This is the home template.
+<h1>Welcome to Django Blog!</h1>
+
+<p>Latest Posts</p>
+
+  {% for post in posts.all %}
+    <p>{{ post.title }}</p>
+  {% endfor %}
