Edit Home template; Create methods to render the Post data correctly

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -4,4 +4,7 @@
 
   {% for post in posts.all %}
     <p>{{ post.title }}</p>
+    <p>{{ post.pub_date_display }}</p>
+    <p>{{ post.summary }}...</p>
+    <br />
   {% endfor %}
