Add setup to display images correctly

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -6,5 +6,6 @@
     <p>{{ post.title }}</p>
     <p>{{ post.pub_date_display }}</p>
     <p>{{ post.summary }}...</p>
+    <img src="{{ post.image.url }}" alt="">
     <br />
   {% endfor %}
