--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -1,12 +1,32 @@
-<h1>Welcome to Django Blog!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Django Blog</title>
 
-<p>Latest Posts</p>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  </head>
 
-  {% for post in posts.all %}
-    <p>{{ post.title }}</p>
-    <p>{{ post.pub_date_display }}</p>
-    <p>{{ post.summary }}...</p>
-    <img src="{{ post.image.url }}" alt="">
-    <br />
-    <a href="{% url 'post_detail' post.id %}">See more</a>
-  {% endfor %}
+  <body>
+    <h1>Welcome to Django Blog!</h1>
+
+    <p>Latest Posts</p>
+
+      {% for post in posts.all %}
+        <p>{{ post.title }}</p>
+        <p>{{ post.pub_date_display }}</p>
+        <p>{{ post.summary }}...</p>
+        <img src="{{ post.image.url }}" alt="">
+        <br />
+        <a href="{% url 'post_detail' post.id %}">See more</a>
+      {% endfor %}
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  </body>
+</html>
