--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -13,18 +13,43 @@
   </head>
 
   <body>
-    <h1>Welcome to Django Blog!</h1>
+    <nav class="navbar navbar-default">
+        <!-- Brand and toggle get grouped for better mobile display -->
+         <div class="navbar-header">
+           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynav" aria-expanded="false">
+             <span class="sr-only">Toggle navigation</span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+           </button>
+           <a class="navbar-brand" href="{% url 'home' %}">Django Blog</a>
+         </div>
 
-    <p>Latest Posts</p>
+         <!-- Collect the nav links, forms, and other content for toggling -->
+         <div class="collapse navbar-collapse" id="mynav">
+           <ul class="nav navbar-nav">
+             <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+             <li><a href="#">About</a></li>
+           </ul>
+      </div>
+    </nav>
 
-      {% for post in posts.all %}
-        <p>{{ post.title }}</p>
-        <p>{{ post.pub_date_display }}</p>
-        <p>{{ post.summary }}...</p>
-        <img src="{{ post.image.url }}" alt="">
-        <br />
-        <a href="{% url 'post_detail' post.id %}">See more</a>
-      {% endfor %}
+    <div class="container">
+      <h1>Welcome to Django Blog!</h1>
+
+      {% load static %}
+      <!-- <img src="{% static 'posts/home.jpg' %}" alt=""> -->
+      <h3>Latest Posts</h3>
+        {% for post in posts.all %}
+          <p>{{ post.title }}</p>
+          <p>{{ post.pub_date_display }}</p>
+          <p>{{ post.summary }}...</p>
+          <img src="{{ post.image.url }}" class="img-responsive thumbnail" style="max-height: 150px">
+          <br />
+          <a href="{% url 'post_detail' post.id %}">See more</a>
+          <p>-----</p>
+        {% endfor %}
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
